--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 								</li>
 								<li class="menu__item"><a class="menu__link" href="#">FAQ</a>
 								</li>
-								
+
 							</ul>
 						</nav>
 					</div>
 
-					<a href="#" class="header__button button button--dark" data-da=".menu__list,8,540">Download Now <img
+					<a href="#" class="header__button button button--dark" data-da=".menu__body,2,540">Download Now <img
 							src="img/arrow-white.svg" alt="arrow">
 					</a>
 					<button aria-label="Open/close menu button" class="icon-menu" id="menu02">
