hero and features section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,53 @@
 		</header>
 		<main class="page">
 			<section class="hero">
+				<div class="hero__shape-bottom">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
+						<path class="shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3
+					c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3
+					c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
+					</svg>
+
+				</div>
+				<div class="hero__container">
+					<div class="hero__content">
+						<div class="hero__label">Because You Have Better Things to Remember</div>
+						<h1 class="hero__title">Shopping Made Simple</h1>
+						<div class="hero__text">Turn WhatsApp messages into a smart shopping list - automatically.</div>
+					</div>
+					<div class="hero__image">
+						<img src="img/hero.webp" alt="Image">
+					</div>
+				</div>
 			</section>
+			<div class="features">
+				<div class="features__container">
+					<div class="features__label label">Features</div>
+					<h2 class="features__title title">Key Tools That Make Shopping Easier</h2>
+					<div class="features__wrapper">
+						<div class="features__item item-features">
+							<div class="item-features__icon"><img src="img/integration.svg" alt="reminder"></div>
+							<h3 class="item-features__title">WhatsApp Integration</h3>
+							<div class="item-features__text">Automatically detects shopping requests from your chats</div>
+						</div>
+						<div class="features__item item-features">
+							<div class="item-features__icon"><img src="img/time.svg" alt="time"></div>
+							<h3 class="item-features__title">Real-Time Sync</h3>
+							<div class="item-features__text">Updates your list instantly for all household members.</div>
+						</div>
+						<div class="features__item item-features">
+							<div class="item-features__icon"><img src="img/reminder.svg" alt="reminder"></div>
+							<h3 class="item-features__title">Smart Reminders</h3>
+							<div class="item-features__text">Get notified when it's time to shop.</div>
+						</div>
+						<div class="features__item item-features">
+							<div class="item-features__icon"><img src="img/secure.svg" alt="secure"></div>
+							<h3 class="item-features__title">Secure & Private</h3>
+							<div class="item-features__text">Your shopping data stays safe and private.</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -79,6 +125,9 @@
 				</div>
 			</div>
 		</footer>
+		<button id="scrollToTopBtn">
+			<img src="img/arrow-up.svg" alt="up">
+		</button>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/script.js"></script>
 	</div>
