--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-			<div class="features">
+			<section class="features">
 				<div class="features__container">
 					<div class="features__label label">Features</div>
 					<h2 class="features__title title">Key Tools That Make Shopping Easier</h2>
@@ -102,7 +102,48 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+			<section class="partners">
+				<div class="partners__container">
+					<div class="partners__top-wrap">
+						<div class="partners__heading">
+							<div class="partners__label label">Partners</div>
+							<h2 class="partners__title title title--white">Trusted by Thousands of Shoppers</h2>
+						</div>
+						<div class="partners__logos logo-partner">
+							<img class="logo-partner__img" src="img/logo-1.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-2.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-3.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-4.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-5.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-6.webp" alt="Logo">
+						</div>
+					</div>
+					<div class="partners__bottom-wrap">
+						<div class="partners__info">
+							<h3 class="partners__subtitle">Smart & Simple</h3>
+							<p class="partners__text">Growing every day to make shopping easier for you.</p>
+						</div>
+						<div class="partners__counter counter">
+							<div class="counter__item item-counter">
+								<div class="item-counter__number" data-count="30">30M+</div>
+								<div class="item-counter__element"></div>
+								<span class="item-counter__text">total download</span>
+							</div>
+							<div class="counter__item item-counter">
+								<div class="item-counter__number" data-count="800">800+</div>
+								<div class="item-counter__element"></div>
+								<span class="item-counter__text">positive review</span>
+							</div>
+							<div class="counter__item item-counter">
+								<div class="item-counter__number" data-count="99">99%</div>
+								<div class="item-counter__element"></div>
+								<span class="item-counter__text">happy customer</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
