--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<div class="header__menu menu">
 						<nav class="menu__body">
 							<ul class="menu__list">
-								<li class="menu__item"><a class="menu__link" href="#">Features</a>
+								<li class="menu__item"><a class="menu__link" href="#features">Features</a>
 								</li>
-								<li class="menu__item"><a class="menu__link" href="#">Partners</a>
+								<li class="menu__item"><a class="menu__link" href="#partners">Partners</a>
 								</li>
 								<li class="menu__item"><a class="menu__link" href="#">About Us</a>
 								</li>
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="features">
+			<section class="features" id="features">
 				<div class="features__container">
 					<div class="features__label label">Features</div>
 					<h2 class="features__title title">Key Tools That Make Shopping Easier</h2>
@@ -103,7 +103,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="partners">
+			<section class="partners" id="partners">
 				<div class="partners__container">
 					<div class="partners__top-wrap">
 						<div class="partners__heading">
