--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						</div>
 						<div class="partners__counter counter">
 							<div class="counter__item item-counter">
-								<div class="item-counter__number" data-count="30">30M+</div>
+								<div class="item-counter__number" data-count="30000000">30M+</div>
 								<div class="item-counter__element"></div>
 								<span class="item-counter__text">total download</span>
 							</div>
