--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								</li>
 								<li class="menu__item"><a class="menu__link" href="#partners">Partners</a>
 								</li>
-								<li class="menu__item"><a class="menu__link" href="#">About Us</a>
+								<li class="menu__item"><a class="menu__link" href="#about">About Us</a>
 								</li>
 								<li class="menu__item"><a class="menu__link" href="#">Process</a>
 								</li>
@@ -58,11 +58,10 @@
 			<section class="hero">
 				<div class="hero__shape-bottom">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
-						<path class="shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3
-					c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3
-					c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
+						<path class="shape-fill" d="M209.5,93.1c59.3-5.3,116.8-18,192.6-50c29.6-12.7,76.9-31,100.5-35.9c23.6-4.9,52.6-7.8,75.5-5.3
+	        c10.2,1.1,22.6,1.4,50.1,7.4c27.2,6.3,58.2,16.6,79.4,24.7c41.3,15.9,94.9,21.9,134,22.6C928,58.2,1000,25.8,1000,25.8V100H0V65.3
+	        c0,0,51.5,19.4,106.2,25.7C160.5,97,185.9,95.2,209.5,93.1z"></path>
 					</svg>
-
 				</div>
 				<div class="hero__container">
 					<div class="hero__content">
@@ -83,7 +82,7 @@
 						<div class="features__item item-features">
 							<div class="item-features__icon"><img src="img/integration.svg" alt="reminder"></div>
 							<h3 class="item-features__title">WhatsApp Integration</h3>
-							<div class="item-features__text">Automatically detects shopping requests from your chats</div>
+							<div class="item-features__text">Automatically detects shopping requests from your chats.</div>
 						</div>
 						<div class="features__item item-features">
 							<div class="item-features__icon"><img src="img/time.svg" alt="time"></div>
@@ -144,6 +143,255 @@
 					</div>
 				</div>
 			</section>
+			<section class="about about--background" id="about">
+				<div class="about__container">
+					<div class="about__content">
+						<div class="about__info">
+							<div class="about__label label">
+								About Us
+							</div>
+							<h2 class="about__title title">
+								A Smarter Way to Manage Your Shopping List
+							</h2>
+							<div class="about__text">
+								Easily capture shopping requests from WhatsApp and keep everything organized in one place. No
+								more
+								forgetting items or
+								making multiple trips!
+							</div>
+							<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
+									alt="arrow"></a>
+						</div>
+
+						<div class="about__details details">
+							<div class="details__item item-details">
+								<img class="item-details__icon" src="img/checkmark.svg" alt="Image">
+								<div class="item-details__info">
+									<h3 class="item-details__title">Effortless List Creation</h3>
+									<p class="item-details__text">Just send a message - our app automatically turns it into a
+										shopping list.</p>
+								</div>
+							</div>
+							<div class="details__item item-details">
+								<img class="item-details__icon" src="img/checkmark.svg" alt="Image">
+								<div class="item-details__info">
+									<h3 class="item-details__title">Stay Organized with Smart Sync</h3>
+									<p class="item-details__text">Your list updates instantly across all devices - everyone stays
+										on the same page.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+				</div>
+			</section>
+			<section class="process">
+				<div class="process__container">
+					<div class="process__label label">process</div>
+					<h2 class="process__title title">Get Started in 3 Simple Steps</h2>
+					<div class="process__wrapper">
+						<div class="process__item item-process">
+							<div class="item-process__icon"><img src="img/download.svg" alt="download"></div>
+							<h3 class="item-process__title">Download the App</h3>
+							<p class="item-process__text">Get the app from Google Play or the App Store and install it in
+								seconds.</p>
+							<span class="item-process__number">01</span>
+						</div>
+						<svg class="arrow arrow--1" xmlns="http://www.w3.org/2000/svg" width="112" height="22"
+							viewBox="0 0 112 22" fill="none">
+							<path d="M1 16.5063C1 16.5063 51.2853 -18.5388 107.237 16.5063" stroke="#095188" stroke-width="1.5"
+								stroke-dasharray="5 5" />
+							<path
+								d="M99.1837 19.8272C99.1837 19.8272 109.598 22.5349 110.591 19.4673C111.583 16.3997 110.838 13.2275 107.615 8.88162"
+								stroke="#095188" stroke-width="1.5" stroke-dasharray="4 4" />
+						</svg>
+
+
+						<div class="process__item item-process">
+							<div class="item-process__icon"><img src="img/sync.svg" alt="sync"></div>
+							<h3 class="item-process__title">Connect Your WhatsApp</h3>
+							<p class="item-process__text">Sync your WhatsApp account to start adding items effortlessly.</p>
+							<span class="item-process__number">02</span>
+						</div>
+						<svg class="arrow arrow--2" xmlns="http://www.w3.org/2000/svg" width="112" height="22"
+							viewBox="0 0 112 22" fill="none">
+							<path d="M1 16.5063C1 16.5063 51.2853 -18.5388 107.237 16.5063" stroke="#095188" stroke-width="1.5"
+								stroke-dasharray="5 5" />
+							<path
+								d="M99.1837 19.8272C99.1837 19.8272 109.598 22.5349 110.591 19.4673C111.583 16.3997 110.838 13.2275 107.615 8.88162"
+								stroke="#095188" stroke-width="1.5" stroke-dasharray="4 4" />
+						</svg>
+						<div class="process__item item-process">
+							<div class="item-process__icon"><img src="img/shop.svg" alt="shop"></div>
+							<h3 class="item-process__title">Start Shopping Smarter</h3>
+							<p class="item-process__text">Your WhatsApp messages turn into an organized shopping list
+								automatically.</p>
+							<span class="item-process__number">03</span>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="advantages">
+				<div class="advantages__container">
+					<div class="advantages__body">
+						<div class="advantages__content">
+							<h2 class="advantages__title title title--white">
+								Shop Smarter. Live Better.
+							</h2>
+							<div class="advantages__items-wrap">
+								<article class="advantages__item item-advantages">
+									<div class="item-advantages__icon"><img src="img/time-save.svg" alt="Image"></div>
+									<div class="item-advantages__info">
+										<h3 class="item-advantages__title">30+ Hours Saved Per Year</h3>
+										<p class="item-advantages__text">Less time spent on list-making.</p>
+									</div>
+								</article>
+								<article class="advantages__item item-advantages">
+									<div class="item-advantages__icon"><img src="img/list.svg" alt="Image"></div>
+									<div class="item-advantages__info">
+										<h3 class="item-advantages__title">3x Faster List Creation</h3>
+										<p class="item-advantages__text">No manual typing needed.</p>
+									</div>
+								</article>
+								<article class="advantages__item item-advantages">
+									<div class="item-advantages__icon"><img src="img/grocery.svg" alt="Image"></div>
+									<div class="item-advantages__info">
+										<h3 class="item-advantages__title">80% Less Grocery Waste</h3>
+										<p class="item-advantages__text">Buy only what you need.</p>
+									</div>
+								</article>
+								<article class="advantages__item item-advantages">
+									<div class="item-advantages__icon"><img src="img/request.svg" alt="Image"></div>
+									<div class="item-advantages__info">
+										<h3 class="item-advantages__title">Zero Overlooked Requests</h3>
+										<p class="item-advantages__text">Never forget an item.</p>
+									</div>
+								</article>
+							</div>
+							<a href="#" class="advantages__button button button--white">Get Started<img
+									src="img/arrow-dark.svg" alt="arrow"></a>
+						</div>
+						<div class="advantages__image">
+							<img src="img/advantages.png" alt="Image">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="dashboard">
+				<div class="dashboard__container">
+					<div class="dashboard__body">
+						<div class="dashboard__label label">Dashboard</div>
+						<h2 class="dashboard__title title title--white">
+							Let’s See How We Work.
+						</h2>
+					</div>
+				</div>
+			</section>
+			<section class="about">
+				<div class="about__container about__container--flex">
+					<div class="about__content">
+						<h2 class="about__title title">
+							Made for Every Age, Every Shopper
+						</h2>
+						<div class="about__text">
+							No matter your age or lifestyle, our app simplifies shopping for everyone. Whether you're
+							tech-savvy or just looking for
+							an easier way to manage your shopping list, we’ve got you covered.
+						</div>
+						<ul class="about__list">
+							<li class="about__item">If you're a young professional, focus on growth, not shopping lists.</li>
+							<li class="about__item">If you're managing a family, spend more time together, not on grocery
+								lists.</li>
+							<li class="about__item">If you're enjoying retirement, make shopping simpler and stress-free.</li>
+						</ul>
+						<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
+								alt="arrow"></a>
+
+					</div>
+					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+				</div>
+			</section>
+			<section class="about">
+				<div class="about__container">
+					<div class="about__content">
+						<h2 class="about__title title">
+							Your Shopping, Your Way </h2>
+						<ul class="about__list">
+							<li class="about__item">Type, voice, or photo, and your list updates instantly.</li>
+							<li class="about__item">Perfect for families, roommates, or solo shoppers.</li>
+							<li class="about__item">Your list is always available, even offline.</li>
+						</ul>
+						<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
+								alt="arrow"></a>
+					</div>
+					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+				</div>
+			</section>
+			<section class="reviews">
+				<div class="reviews__container">
+					<div class="reviews__label label">
+						Reviews
+					</div>
+					<h2 class="reviews__title title">Real Stories from Happy Shoppers</h2>
+					<div class="reviews__items-wrap">
+						<img class="reviews__quotes" src="img/quotes.svg" alt="quotes">
+						<div class="reviews__img"><img src="img/reviews.webp" alt="Image"></div>
+						<div class="reviews__swiper swiper">
+							<div class="reviews__wrapper swiper-wrapper">
+
+
+								<!-- Slides -->
+								<div class="reviews__slide slide-review swiper-slide">
+									<div class="slide-review__text">
+										<p>This app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!</p>
+									</div>
+									<div class="slide-review__user user">
+										<div class="user__image">
+											<img src="img/user-1.webp" alt="user">
+										</div>
+										<div class="user__info">
+											<h3 class="user__title">Emily Johnson</h3>
+											<span>Customer</span>
+										</div>
+									</div>
+								</div>
+								<div class="reviews__slide slide-review swiper-slide">
+									<div class="slide-review__text">
+										<p>This app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!</p>
+									</div>
+									<div class="slide-review__user user">
+										<div class="user__image">
+											<img src="img/user-1.webp" alt="user">
+										</div>
+										<div class="user__info">
+											<h3 class="user__title">Emily Johnson</h3>
+											<span>Customer</span>
+										</div>
+									</div>
+								</div>
+								<div class="reviews__slide slide-review swiper-slide">
+									<div class="slide-review__text">
+										<p>This app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!</p>
+									</div>
+									<div class="slide-review__user user">
+										<div class="user__image">
+											<img src="img/user-1.webp" alt="user">
+										</div>
+										<div class="user__info">
+											<h3 class="user__title">Emily Johnson</h3>
+											<span>Customer</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -151,14 +399,14 @@
 					<a href="#" class="footer__logo"><img src="img/logo-white.svg" alt="logo">
 					</a>
 					<div class="footer__social social">
-						<a class="social__link _icon-facebook" href="#" target="_blank"></a>
-						<a class="social__link _icon-twitter" href="#" target="_blank"></a>
-						<a class="social__link _icon-instagram" href="#" target="_blank"></a>
-						<a class="social__link _icon-youtube" href="#" target="_blank"></a>
+						<a class="social__link _icon-facebook" href="#" target="_blank" aria-label="Facebook"></a>
+						<a class="social__link _icon-twitter" href="#" target="_blank" aria-label="Twitter"></a>
+						<a class="social__link _icon-instagram" href="#" target="_blank" aria-label="Instagram"></a>
+						<a class="social__link _icon-youtube" href="#" target="_blank" aria-label="Youtube"></a>
 					</div>
 				</div>
 				<div class="footer__bottom">
-					<div class="footer__copyright">Copyright©2024-All Rights Reserved Toptal</div>
+					<div class="footer__copyright">© 2025 WhatsBuy. All rights reserved.</div>
 					<div class="footer__terms">
 						<a href="#">Terms and Conditions</a>|
 						<a href="#">Privacy Policy</a>
