--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
 								<!-- Slides -->
 								<div class="reviews__slide slide-review swiper-slide">
 									<div class="slide-review__text">
-										<p>This app completely changed how I shop! No more forgotten items or messy
-											notes—everything is just there when I need it!</p>
+										<p>"This app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!"</p>
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
@@ -358,8 +358,8 @@
 								</div>
 								<div class="reviews__slide slide-review swiper-slide">
 									<div class="slide-review__text">
-										<p>This app completely changed how I shop! No more forgotten items or messy
-											notes—everything is just there when I need it!</p>
+										<p>"This app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!"</p>
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
@@ -373,8 +373,8 @@
 								</div>
 								<div class="reviews__slide slide-review swiper-slide">
 									<div class="slide-review__text">
-										<p>This app completely changed how I shop! No more forgotten items or messy
-											notes—everything is just there when I need it!</p>
+										<p>T"his app completely changed how I shop! No more forgotten items or messy
+											notes—everything is just there when I need it!"</p>
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
