--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 							<h2 class="partners__title title title--white">Trusted by Thousands of Shoppers</h2>
 						</div>
 						<div class="partners__logos logo-partner">
-							<img class="logo-partner__img" src="img/logo-1.webp" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-2.webp" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-3.webp" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-4.webp" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-5.webp" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-6.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-1.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-2.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-3.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-4.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-5.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-6.png" alt="Logo">
 						</div>
 					</div>
 					<div class="partners__bottom-wrap">
@@ -388,6 +388,105 @@
 								</div>
 							</div>
 							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="faq">
+				<div class="faq__container">
+					<div class="faq__left-part">
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">1. How does the app integrate with WhatsApp?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>Our app seamlessly detects shopping-related messages from WhatsApp and automatically converts
+									them into an organized
+									shopping list.</p>
+
+							</div>
+						</div>
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">2. Do I need to manually add items, or does the app recognize them
+									automatically?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>You have the flexibility to either add items manually or allow the app to identify and
+									extract shopping items directly
+									from your messages.</p>
+							</div>
+						</div>
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">3. Can I share my shopping list with others?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>Yes, the app supports real-time list synchronization, enabling seamless sharing with family
+									members, roommates, or
+									anyone in your household.</p>
+							</div>
+						</div>
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">4. Does the app function offline?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>Yes, you can access, view, and update your shopping list even without an internet connection,
+									ensuring uninterrupted
+									usability.</p>
+							</div>
+						</div>
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">5. How is my data protected?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>We prioritize user privacy and security. All data is securely encrypted, and we do not share
+									or sell any user
+									information.</p>
+							</div>
+						</div>
+						<div class="faq__item item-faq">
+							<div class="item-faq__header">
+								<h3 class="item-faq__title">6. How can I get support if I encounter an issue?</h3>
+								<img src="img/up-arrow.svg" alt="arrow">
+							</div>
+							<div class="item-faq__answer">
+								<p>For any assistance, please visit our support page or contact us via email. Our team is
+									available to help and typically
+									responds within two hours.</p>
+							</div>
+						</div>
+					</div>
+					<div class="faq__right-part">
+						<div class="faq__label label">FAQ</div>
+						<h2 class="faq__title title">Got Questions? We’ve Got Answers!</h2>
+						<div class="faq__text text">Find quick answers to the most common questions about our app. If you need
+							more help, feel free to reach out!</div>
+						<h3 class="faq__subtitle">Still have questions?</h3>
+						<p class="faq__text">We're happy to help! We will respond as fast as possible!</p>
+						<a href="#" class="faq__button button button--dark">Leave us a message <img src="img/arrow-white.svg"
+								alt=""></a>
+						<div class="faq__popup popup" id="popup">
+							<div class="popup__content">
+								<span class="popup__close">&times;</span>
+								<h2 class="popup__title">Leave us a message</h2>
+								<form class="popup__form" action="#">
+									<input type="text" class="popup__input" placeholder="Name" required>
+
+									<input type="email" class="popup__input" placeholder="Email" required>
+
+									<textarea class="popup__input" placeholder="Message" required></textarea>
+
+									<button type="submit" class="popup__submit button button--dark">Send message <img src="img/arrow-white.svg" alt="arrow"></button>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
