--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
 									<textarea class="popup__input" placeholder="Message" required></textarea>
 
-									<button type="submit" class="popup__submit button button--dark">Send message <img src="img/arrow-white.svg" alt="arrow"></button>
+									<button type="submit" class="popup__submit button button--dark">Submit<img src="img/arrow-white.svg" alt="arrow"></button>
 								</form>
 							</div>
 						</div>
