--- a/index.html
+++ b/index.html
@@ -484,9 +484,26 @@
 
 									<textarea class="popup__input" placeholder="Message" required></textarea>
 
-									<button type="submit" class="popup__submit button button--dark">Send a message<img src="img/arrow-white.svg" alt="arrow"></button>
+									<button type="submit" class="popup__submit button button--dark">Send a message<img
+											src="img/arrow-white.svg" alt="arrow"></button>
 								</form>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="download">
+				<div class="download__container">
+					<div class="download__body">
+						<div class="download__content">
+							<h2 class="download__title title title--white">Your Shopping List – Get the App Today</h2>
+							<div class="download__text">Simplify your grocery shopping with smart list syncing and real-time
+								updates for your household.</div>
+							<a href="" class="download__button button button--white">Download now <img src="img/arrow-dark.svg"
+									alt="Image"></a>
+						</div>
+						<div class="download__image">
+							<img src="img/hero.webp" alt="Image">
 						</div>
 					</div>
 				</div>
