--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 								</li>
 								<li class="menu__item"><a class="menu__link" href="#about">About Us</a>
 								</li>
-								<li class="menu__item"><a class="menu__link" href="#">Process</a>
+								<li class="menu__item"><a class="menu__link" href="#process">Process</a>
 								</li>
 
-								<li class="menu__item"><a class="menu__link" href="#">Dashboard</a>
+								<li class="menu__item"><a class="menu__link" href="#dashboard">Dashboard</a>
 								</li>
 
-								<li class="menu__item"><a class="menu__link" href="#">Reviews</a>
+								<li class="menu__item"><a class="menu__link" href="#reviews">Reviews</a>
 								</li>
-								<li class="menu__item"><a class="menu__link" href="#">FAQ</a>
+								<li class="menu__item"><a class="menu__link" href="#faq">FAQ</a>
 								</li>
 
 							</ul>
@@ -185,7 +185,7 @@
 					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
 				</div>
 			</section>
-			<section class="process">
+			<section class="process" id="process">
 				<div class="process__container">
 					<div class="process__label label">process</div>
 					<h2 class="process__title title">Get Started in 3 Simple Steps</h2>
@@ -276,7 +276,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="dashboard">
+			<section class="dashboard" id="dashboard">
 				<div class="dashboard__container">
 					<div class="dashboard__body">
 						<div class="dashboard__label label">Dashboard</div>
@@ -326,7 +326,7 @@
 					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
 				</div>
 			</section>
-			<section class="reviews">
+			<section class="reviews" id="reviews">
 				<div class="reviews__container">
 					<div class="reviews__label label">
 						Reviews
@@ -391,7 +391,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="faq">
+			<section class="faq" id="faq">
 				<div class="faq__container">
 					<div class="faq__left-part">
 						<div class="faq__item item-faq">
