--- a/index.html
+++ b/index.html
@@ -283,10 +283,19 @@
 						<h2 class="dashboard__title title title--white">
 							Let’s See How We Work.
 						</h2>
+						<div class="dashboard__video video">
+							<video id="videoPlayer" controls>
+								<source src="video/blue-background.mp4" type="video/mp4">
+							</video>
+							<button class="video__button"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="19"
+									viewBox="0 0 18 19" fill="none">
+									<path d="M18 9.3923L-8.21101e-07 18.7846L0 -7.86805e-07L18 9.3923Z" fill="white" />
+								</svg></button>
+						</div>
 					</div>
 				</div>
 			</section>
-			<section class="about">
+			<section class="about about--padding">
 				<div class="about__container about__container--flex">
 					<div class="about__content">
 						<h2 class="about__title title">
