--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
 							<video id="videoPlayer" controls>
 								<source src="video/blue-background.mp4" type="video/mp4">
 							</video>
-							<button class="video__button"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="19"
+							<!-- <button class="video__button"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="19"
 									viewBox="0 0 18 19" fill="none">
 									<path d="M18 9.3923L-8.21101e-07 18.7846L0 -7.86805e-07L18 9.3923Z" fill="white" />
-								</svg></button>
+								</svg></button> -->
 						</div>
 					</div>
 				</div>
