--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 				<div class="hero__container">
 					<div class="hero__content">
 						<div class="hero__label">Because You Have Better Things to Remember</div>
-						<h1 class="hero__title">Shopping Made Simple</h1>
+						<h1 class="hero__title">
+							Shopping Made <span class="changing-word">Simple</span>
+						</h1>
 						<div class="hero__text">Turn WhatsApp messages into a smart shopping list - automatically.</div>
 					</div>
 					<div class="hero__image">
