--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 							<h2 class="partners__title title title--white">Trusted by Thousands of Shoppers</h2>
 						</div>
 						<div class="partners__logos logo-partner">
-							<img class="logo-partner__img" src="img/logo-1.png" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-2.png" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-3.png" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-4.png" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-5.png" alt="Logo">
-							<img class="logo-partner__img" src="img/logo-6.png" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-1.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-2.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-3.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-4.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-5.webp" alt="Logo">
+							<img class="logo-partner__img" src="img/logo-6.webp" alt="Logo">
 						</div>
 					</div>
 					<div class="partners__bottom-wrap">
