--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 						<div class="features__item item-features">
 							<div class="item-features__icon"><img src="img/integration.svg" alt="reminder"></div>
 							<h3 class="item-features__title">WhatsApp Integration</h3>
-							<div class="item-features__text">Automatically detects shopping requests from your chats.</div>
+							<div class="item-features__text">Automatically detects shopping requests from your chats. lore
+							</div>
 						</div>
 						<div class="features__item item-features">
 							<div class="item-features__icon"><img src="img/time.svg" alt="time"></div>
