--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="features__item item-features">
 							<div class="item-features__icon"><img src="img/integration.svg" alt="reminder"></div>
 							<h3 class="item-features__title">WhatsApp Integration</h3>
-							<div class="item-features__text">Automatically detects shopping requests from your chats. lore
+							<div class="item-features__text">Automatically detects shopping requests from your chats.
 							</div>
 						</div>
 						<div class="features__item item-features">
@@ -148,7 +148,7 @@
 			</section>
 			<section class="about about--background" id="about">
 				<div class="about__container">
-					<div class="about__content">
+					<div class="about__content about__content--left">
 						<div class="about__info">
 							<div class="about__label label">
 								About Us
@@ -185,7 +185,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image about__image--right"><img src="img/about-img.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="process" id="process">
@@ -208,8 +208,6 @@
 								d="M99.1837 19.8272C99.1837 19.8272 109.598 22.5349 110.591 19.4673C111.583 16.3997 110.838 13.2275 107.615 8.88162"
 								stroke="#095188" stroke-width="1.5" stroke-dasharray="4 4" />
 						</svg>
-
-
 						<div class="process__item item-process">
 							<div class="item-process__icon"><img src="img/sync.svg" alt="sync"></div>
 							<h3 class="item-process__title">Connect Your WhatsApp</h3>
@@ -284,7 +282,7 @@
 					<div class="dashboard__body">
 						<div class="dashboard__label label">Dashboard</div>
 						<h2 class="dashboard__title title title--white">
-							Let’s See How We Work.
+							Let’s See How We Work
 						</h2>
 						<div class="dashboard__video video">
 							<video id="videoPlayer" controls>
@@ -300,7 +298,7 @@
 			</section>
 			<section class="about about--padding">
 				<div class="about__container about__container--flex">
-					<div class="about__content">
+					<div class="about__content ">
 						<h2 class="about__title title">
 							Made for Every Age, Every Shopper
 						</h2>
@@ -319,12 +317,12 @@
 								alt="arrow"></a>
 
 					</div>
-					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image "><img src="img/about-img.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="about">
 				<div class="about__container">
-					<div class="about__content">
+					<div class="about__content about__content--left">
 						<h2 class="about__title title">
 							Your Shopping, Your Way </h2>
 						<ul class="about__list">
@@ -335,7 +333,7 @@
 						<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
 								alt="arrow"></a>
 					</div>
-					<div class="about__image"><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image about__image--right"><img src="img/about-img.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="reviews" id="reviews">
@@ -346,7 +344,7 @@
 					<h2 class="reviews__title title">Real Stories from Happy Shoppers</h2>
 					<div class="reviews__items-wrap">
 						<img class="reviews__quotes" src="img/quotes.svg" alt="quotes">
-						<div class="reviews__img"><img src="img/reviews.webp" alt="Image"></div>
+						<div class="reviews__img"><img src="img/pexels-fauxels-3183181.jpg" alt="Image"></div>
 						<div class="reviews__swiper swiper">
 							<div class="reviews__wrapper swiper-wrapper">
 
@@ -369,30 +367,30 @@
 								</div>
 								<div class="reviews__slide slide-review swiper-slide">
 									<div class="slide-review__text">
-										<p>"This app completely changed how I shop! No more forgotten items or messy
-											notes—everything is just there when I need it!"</p>
+										<p>"A game-changer! Now I don’t have to scroll through endless messages to remember what to buy. Everything is in one
+										place, and it updates instantly!"</p>
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
-											<img src="img/user-1.webp" alt="user">
+											<img src="img/user-2.avif" alt="user">
 										</div>
 										<div class="user__info">
-											<h3 class="user__title">Emily Johnson</h3>
+											<h3 class="user__title">John Winslow</h3>
 											<span>Customer</span>
 										</div>
 									</div>
 								</div>
 								<div class="reviews__slide slide-review swiper-slide">
 									<div class="slide-review__text">
-										<p>T"his app completely changed how I shop! No more forgotten items or messy
-											notes—everything is just there when I need it!"</p>
+										<p>"This app makes shopping so much easier. I love how it syncs with WhatsApp, and I never miss an item again. Super
+										convenient!"</p>
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
-											<img src="img/user-1.webp" alt="user">
+											<img src="img/user-3.avif" alt="user">
 										</div>
 										<div class="user__info">
-											<h3 class="user__title">Emily Johnson</h3>
+											<h3 class="user__title">Clara Henshaw</h3>
 											<span>Customer</span>
 										</div>
 									</div>
