--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 					<h2 class="reviews__title title">Real Stories from Happy Shoppers</h2>
 					<div class="reviews__items-wrap">
 						<img class="reviews__quotes" src="img/quotes.svg" alt="quotes">
-						<div class="reviews__img"><img src="img/pexels-fauxels-3183181.jpg" alt="Image"></div>
+						<div class="reviews__img"><img src="img/reviews-img.webp" alt="Image"></div>
 						<div class="reviews__swiper swiper">
 							<div class="reviews__wrapper swiper-wrapper">
 
@@ -372,7 +372,7 @@
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
-											<img src="img/user-2.avif" alt="user">
+											<img src="img/user-2.webp" alt="user">
 										</div>
 										<div class="user__info">
 											<h3 class="user__title">John Winslow</h3>
@@ -387,7 +387,7 @@
 									</div>
 									<div class="slide-review__user user">
 										<div class="user__image">
-											<img src="img/user-3.avif" alt="user">
+											<img src="img/user-3.webp" alt="user">
 										</div>
 										<div class="user__info">
 											<h3 class="user__title">Clara Henshaw</h3>
