--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="about__image about__image--right"><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image about__image--right"><img src="img/5_(Mockup)1.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="process" id="process">
@@ -273,6 +273,7 @@
 									src="img/arrow-dark.svg" alt="arrow"></a>
 						</div>
 						<div class="advantages__image">
+							<img src="img/7.png" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -317,7 +318,7 @@
 								alt="arrow"></a>
 
 					</div>
-					<div class="about__image "><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image "><img src="img/9_(Mockup).png" alt="Image"></div>
 				</div>
 			</section>
 			<section class="about">
@@ -333,7 +334,7 @@
 						<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
 								alt="arrow"></a>
 					</div>
-					<div class="about__image about__image--right"><img src="img/about-img.webp" alt="Image"></div>
+					<div class="about__image about__image--padding about__image--right"><img src="img/10_(Mockup).png" alt="Image"></div>
 				</div>
 			</section>
 			<section class="reviews" id="reviews">
@@ -515,7 +516,7 @@
 									alt="Image"></a>
 						</div>
 						<div class="download__image">
-							<img src="img/hero.webp" alt="Image">
+							<img src="img//14_(Mockup).png" alt="Image">
 						</div>
 					</div>
 				</div>
