--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="about__image about__image--right"><img src="img/5_(Mockup)1.webp" alt="Image"></div>
+					<div class="about__image about__image--right"><img src="img/about-1.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="process" id="process">
@@ -273,7 +273,7 @@
 									src="img/arrow-dark.svg" alt="arrow"></a>
 						</div>
 						<div class="advantages__image">
-							<img src="img/7.png" alt="Image">
+							<img src="img/advantages.webp" alt="Image">
 						</div>
 					</div>
 				</div>
@@ -318,7 +318,7 @@
 								alt="arrow"></a>
 
 					</div>
-					<div class="about__image "><img src="img/9_(Mockup).png" alt="Image"></div>
+					<div class="about__image "><img src="img/about-2.webp" alt="Image"></div>
 				</div>
 			</section>
 			<section class="about">
@@ -334,7 +334,8 @@
 						<a href="#" class="about__button button button--dark">Get started<img src="img/arrow-white.svg"
 								alt="arrow"></a>
 					</div>
-					<div class="about__image about__image--padding about__image--right"><img src="img/10_(Mockup).png" alt="Image"></div>
+					<div class="about__image about__image--padding about__image--right"><img src="img/about-3.webp"
+							alt="Image"></div>
 				</div>
 			</section>
 			<section class="reviews" id="reviews">
@@ -516,7 +517,7 @@
 									alt="Image"></a>
 						</div>
 						<div class="download__image">
-							<img src="img//14_(Mockup).png" alt="Image">
+							<img src="img/download.webp" alt="Image">
 						</div>
 					</div>
 				</div>
