--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 									src="img/arrow-dark.svg" alt="arrow"></a>
 						</div>
 						<div class="advantages__image">
-							<img src="img/advantages.webp" alt="Image">
+							<img src="img/7.png" alt="Image">
 						</div>
 					</div>
 				</div>
