--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 			<img src="img/arrow-up.svg" alt="up">
 		</button>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/script.js" defer></script>
 	</div>
 </body>
 
