--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 					<div class="header__logo logo">
 						<img src="img/logo.svg" alt="Image">
 					</div>
-			
+
 
 					<a href="#" class="header__button button button--dark" data-da=".menu__body,2,480">Download Now <img
 							src="img/arrow-white.svg" alt="arrow">
 					</a>
-					
+
 				</div>
 			</div>
 		</header>
@@ -45,18 +45,19 @@
 						</h1>
 						<div class="hero__text">Turn WhatsApp messages into a smart shopping list - automatically.</div>
 					</div>
-				<div class="hero__video video">
-					<video id="videoPlayer" controls>
-						<source src="video/video.mp4" type="video/mp4">
-					</video>
+					<div class="hero__video video">
+						<video id="videoPlayer" controls>
+							<source src="video/video.mp4" type="video/mp4">
+						</video>
+					</div>
 				</div>
 			</section>
 
 		</main>
 		<footer class="footer">
-		
+
 		</footer>
-	
+
 		<script src="js/script.js"></script>
 	</div>
 </body>
